<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Settings"
    android:background="@color/ScreenColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/Redcolor"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

            ></androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Change_p"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editText13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:inputType="textPersonName"
            android:hint="@string/Old_p"
            android:layout_below="@id/textView20"/>

        <EditText
            android:id="@+id/editText14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/new_p"
            android:layout_marginTop="5dp"
            android:layout_below="@id/editText13"/>

        <EditText
            android:id="@+id/editText15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginTop="5dp"
            android:hint="@string/confirm_p"
            android:layout_below="@id/editText14"/>

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm_button"
            android:layout_below="@id/editText15"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
           android:background="@color/Redcolor"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Change_pin"
            android:layout_marginTop="10dp"
            android:layout_below="@id/button11"/>

        <EditText
            android:id="@+id/editText16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/textView21"
            android:inputType="number"
            android:hint="@string/Old_pin"

            />

        <EditText
            android:id="@+id/editText17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/new_pin"
            android:layout_below="@id/editText16"/>

        <EditText
            android:id="@+id/editText18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/confirm_pin"
            android:layout_below="@id/editText17"/>

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Confirm_button"
            android:layout_below="@id/editText18"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/Redcolor"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/About_Us"
            android:layout_below="@id/button12"
            android:layout_marginTop="20dp"
            android:textColor="@color/Redcolor"
            android:textSize="15sp"/>


    </RelativeLayout>
</ScrollView>
